pnpconference/css/pnpconference.css
/* ... */
@media screen and (max-width: 479px) {
  .category-card-light {
    width: 100%;
    padding: 15vw;
  }

  .box-content-light {
    padding: 4vw 4vw;
  }
}

.category-card-light.category-card {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 4vw;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: start;
  -webkit-align-items: flex-start;
  -ms-flex-align: start;
  align-items: flex-start;
  background-color: #111;
}

.category-card-light.category-card:hover {
  background-color: transparent;
}

.layout-content-card-light {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 33.33%;
  margin-right: -1px;
  margin-bottom: -1px;
  padding: 4vw;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-box-align: start;
  -webkit-align-items: flex-start;
  -ms-flex-align: start;
  align-items: flex-start;
  border-style: solid;
  border-width: 1px;
  border-color: #edebe9;
  background-color: #fff;
  text-decoration: none;
}

.layout-content-card-light:hover {
  background-color: #fff;
  background-image: -webkit-gradient(
    linear,
    left top,
    left bottom,
    from(rgba(236, 240, 241, 0.2)),
    to(rgba(236, 240, 241, 0.2))
  );
  background-image: linear-gradient(180deg, rgba(236, 240, 241, 0.2), rgba(236, 240, 241, 0.2));
}

@media screen and (max-width: 991px) {
  .layout-content-card-light {
    width: 50%;
    margin-right: 0px;
    margin-bottom: -1px;
    padding: 4vw;
  }
}

@media screen and (max-width: 767px) {
  .layout-content-card-light {
    padding-right: 4vw;
    padding-left: 4vw;
  }
}

@media screen and (max-width: 479px) {
  .layout-content-card-light {
    width: 100%;
    padding: 4vw;
  }
}

.layout-content-card-light.left {
  -webkit-box-align: start;
  -webkit-align-items: flex-start;
  -ms-flex-align: start;
  align-items: flex-start;
}

.layout-content-card-light.right {
  padding-bottom: 13vw;
  -webkit-box-align: end;
  -webkit-align-items: flex-end;
  -ms-flex-align: end;
  align-items: flex-end;
  text-align: right;
}

.layout-category-heading {
  position: relative;
  z-index: 1;
  color: #fff;
  font-size: 32px;
  line-height: 150%;
  text-align: left;
}

.layout-category-heading.black {
  color: #000;
  font-weight: 600;
}

.layout-category-nav {
  position: absolute;
  left: auto;
  top: 0%;
  right: 0%;
  bottom: 0%;
  display: none;
  width: 32px;
  height: 120px;
  margin-top: auto;
  margin-right: -1px;
  margin-bottom: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid #444;
}

.layout-category-nav.light {
  border-color: #ecf0f1;
}

.layout-arrow-icon {
  width: 24px;
}

.top-icon {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 40px;
  height: 40px;
  margin-right: 16px;
  margin-bottom: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100px;
  background-color: #fff;
  box-shadow: 0 1px 3px 0 #bdc3c7;
}

.h3-heading {
  /* margin-bottom: 28px; */
  color: #fff;
  font-weight: 600;
}

.h3-heading.black {
  color: #000;
}

.text-transparent {
  color: #fff;
  font-size: 14px;
}

.text-transparent.black {
  color: #000;
}

.button-wrapper {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: auto;
  margin-top: 16px;
  -webkit-box-align: end;
  -webkit-align-items: flex-end;
  -ms-flex-align: end;
  align-items: flex-end;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #ff003d;
  font-weight: 700;
  text-decoration: none;
}

.button-wrapper.w--current {
  color: transparent;
}

.button-text {
  position: relative;
  z-index: 1;
  margin-right: 0px;
  margin-left: 0px;
  color: #0078d4;
  font-size: 12px;
  font-weight: 600;
  letter-spacing: 1px;
  text-transform: uppercase;
}

.button-text.white {
  color: #fff;
  text-transform: uppercase;
}

.button-arrow-2 {
  width: 15px;
  margin-right: 20px;
}

.speakertagline {
  color: #636e72;
  font-size: 12px;
  line-height: 18px;
  font-weight: 400;
  text-transform: uppercase;
}

.layout-content-card-light .social-link {
  text-decoration: none;
}

.layout-content-card-light .fdml {
  color: #636e72;
  opacity: 0.5;
  text-decoration: none;
}

.layout-content-card-light .fdml:hover {
  opacity: 1;
}

.w-background-video {
  position: relative;
  overflow: hidden;
  height: 500px;
  color: white;
}

.w-background-video > video {
  background-size: cover;
  background-position: 50% 50%;
  position: absolute;
  margin: auto;
  width: 100%;
  height: 100%;
  right: -100%;
  bottom: -100%;
  top: -100%;
  left: -100%;
  object-fit: cover;
  z-index: -100;
}
.w-background-video > video::-webkit-media-controls-start-playback-button {
  display: none !important;
  -webkit-appearance: none;
}

.background-video {
  position: absolute;
  width: 100%;
  height: 100%;
}

.background-video {
  min-height: 100vh;
}

.h06_h1 {
  max-width: 100%;
  margin-top: 0px;
  margin-bottom: 15px;
  font-family: Segoeui, sans-serif;
  color: #fff;
  font-size: 72px;
  line-height: 114%;
  font-weight: 600;
  text-align: left;
}
/* ... */

